--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
-		<title>My Page</title>
+		<title>Document</title>
 	</head>
 	<body>
-		<div class="main">
-			<div id="data1">Data 1</div>
-			<div id="data2">Data 2</div>
-			<div id="data3">Data 3</div>
-			<button id="btn">Button</button>
-		</div>
+		Hello
+		<script src="./node_modules/axios/dist/axios.min.js"></script>
+		<script src="script.js"></script>
 	</body>
-	<script src="script.js"></script>
 </html>
